--- a/static/styleUsers.css
+++ b/static/styleUsers.css
@@ -101,7 +101,7 @@ h2 {
 @import 'https://fonts.googleapis.com/css?family=Montserrat:300,400,700';
 
 body {
-  padding: 0 2em;
+  /* padding: 0 2em; */
   width: 100%;
   height: 1000px;
   font-family: Montserrat, sans-serif;
@@ -120,6 +120,153 @@ body {
 
 
 
+.divForm {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #fcfefe;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+  opacity: 0.91;
+  display:none;
+  /* visibility: hidden; */
+
+}
+
+body {
+  background-color: #383737;
+  overflow-x: hidden;
+  height: 180vh;
+}
+
+.form-container {
+  width: 400px;
+  margin: 0 auto;
+  box-shadow: 0px 0px 10px #000;
+  margin-top: 20px;
+  padding: 20px;
+  background: rgb(43, 226, 131);
+  color: #1d0606;
+}
+
+h2 {
+  text-align: center;  
+}
+
+label {
+  display: block;
+  margin: 10px 0;
+}
+
+label.error {
+  color: #D51C1C;
+  margin-top: -6px;
+}
+
+input {
+  height: 26px;
+  width: 100%;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid #88FC56;
+  background-color: #555755;
+  color: #E3DFDF;
+  font-size: 14px;
+  padding-left:10px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+input:focus {
+  box-shadow: 0 0 6px #88FC56;
+}
+
+input.error {
+  border: 1px solid #D51C1C;  
+}
+
+input:focus.error {
+  box-shadow: 0 0 6px #D51C1C;
+}
+
+.submit {
+  display: block;
+  width: 10%;
+  margin: 20px auto 0 auto;
+  height: 40px;
+  background-color: #88FC56;
+  color: #555755;
+  font-weight: bold;
+  padding-left: 0;
+}
+
+input[type="checkbox"] {
+	visibility: hidden;
+  width: 20px;
+}
+
+input[type="checkbox"]:after {
+  content: '';
+  display: block;
+  position: absolute;
+  top: -1px;
+  left: -1px;
+  width: 20px;
+  height: 20px;
+  border: 1.6px solid #D51C1C;
+  border-radius: 4px;
+  box-sizing: border-box;
+  transition: all .3s ease;
+}
+
+input[type=checkbox]:checked ~ .checkbox-switch:after {
+	opacity: 1;
+}
+
+input[type=checkbox].error:after {
+  visibility: visible;
+}
+
+.checkbox {
+  width: 20px;
+  height: 20px;
+  border-radius: 4px;
+  background-color: #555755;
+  cursor: pointer;
+  position: relative;
+  border: 1px solid #88FC56;
+}
+
+.checkbox input {
+  height: 20px;
+  margin-bottom: 0; 
+}
+
+.checkbox #agree-error {
+    position: absolute;
+    top: 6px;
+    left: 30px;
+    min-width: 200px;
+}
+
+.checkbox-switch:after {
+  content: '';
+	display: block;
+  position: absolute;
+	height: 5px;
+	width: 10px;
+	border-top: 2px solid #88FC56;
+	border-right: 2px solid #88FC56;
+	top: 4px;
+	left: 4px;
+	transform: rotate(132deg);
+	opacity: 0;
+}
+#validModif {
+  width: max-content;
+}
 
 
 
